# website

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  whoami.html
docs/: whoami.md
docs/projects/: llm-collector.md  mkdocs-website.md  wb-cursor.md
projects/: how-to-build-website.html  open-notebook-in-pycharm.html
stuff/: how-to-build-website.html  open-notebook-in-pycharm.html
